fix: modify CustomUserDetails